update .svg links
http://tympanus.net/Development/DraggableDualViewSlideshow/....img/switchmin + switchmax .svg

--- a/css/component.css
+++ b/css/component.css
@@ -68,7 +68,7 @@ button.slider-switch {
 	color: transparent;
 	position: relative;
 	border: none;
-	background: url(../img/switchmin.svg) no-repeat center center;
+	background: url(http://tympanus.net/Development/DraggableDualViewSlideshow/img/switchmin.svg) no-repeat center center;
 	background-size: 90%;
 	float: right;
 	outline: none;
@@ -84,7 +84,7 @@ button.slider-switch {
 }
 
 button.slider-switch.view-maxi {
-	background-image: url(../img/switchmax.svg)
+	background-image: url(http://tympanus.net/Development/DraggableDualViewSlideshow/img/switchmax.svg)
 }
 
 button.slider-switch:hover {
