--- a/main.css
+++ b/main.css
@@ -3,8 +3,7 @@
 
 /* S02 header */
 h2.slogan-quote {
-    line-height: 1.5em;
-    font-size: 80%;
+    font-weight: 100;
     font-style: italic;
     letter-spacing: .5em;
     border: 1px solid;
