--- a/main.css
+++ b/main.css
@@ -13,6 +13,15 @@ h4.overlay-instructions-about {
     background-size: cover;
     background-repeat: no-repeat;
     background-color: rgba(88,133,159,.5);
+    z-index: 0;
+    background: rgb(0,0,0);
+}
+
+img.aurora-skeleton-viz-img-2 {
+    opacity: .25;
+    transform: scale(0.73);
+    padding-bottom: 1em;
+    z-index: 2;
 }
 
 /* S02 header */
