--- a/main.css
+++ b/main.css
@@ -17,7 +17,7 @@ h4.overlay-instructions-about {
     background: rgb(0,0,0);
 }
 
-img.aurora-skeleton-viz-img-2 {
+img.aurora-skeleton-viz-img-1 {
     opacity: .25;
     transform: scale(0.73);
     padding-bottom: 1em;
@@ -25,6 +25,22 @@ img.aurora-skeleton-viz-img-2 {
 }
 
 /* S02 header */
+.slide.SH2.current {
+    background: url(https://cloud.githubusercontent.com/assets/4642277/11176707/6bb89836-8c0d-11e5-8925-98469435e8ad.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-color: rgba(88,133,159,.5);
+    z-index: 0;
+    background: rgb(0,0,0);
+}
+
+img.aurora-skeleton-viz-img-2 {
+      opacity: .25;
+    transform: scale(0.73);
+    padding-bottom: 1em;
+    z-index: 2;
+}
+
 .js .slide h2.slogan-quote {
     font-weight: 100;
     /* font-style: italic; */
