--- a/main.css
+++ b/main.css
@@ -58,12 +58,11 @@ img.aurora-skeleton-viz-img-2 {
     background-repeat: no-repeat;
     background-color: rgba(88,133,159,.5);
     z-index: 0;
-    background: rgb(0,0,0);
+    background-position-x: -2em;
+    transform: scale(1.05);
 }
 
 img.aurora-skeleton-viz-img-inside-02c {
-    opacity: .25;
-    transform: scale(0.73);
-    padding-bottom: 1em;
-    z-index: 2;
+    opacity: .4;
+    transform: scale(1.03);
 }
