--- a/css/component.css
+++ b/css/component.css
@@ -251,6 +251,7 @@ button.slider-switch:hover {
 }
 
 button.content-switch {
+	content: 'fa fa-caret-down';
 	border: 2px solid #fff;
 	width: 160px;
 	text-indent: 200%;
@@ -258,7 +259,8 @@ button.content-switch {
 	white-space: nowrap;
 	background: transparent;
 	color: #fff;
-	font-family: 'Lato', sans-serif;
+	/* font-family: 'Lato', sans-serif; */
+	font-family: 'font-awesome';
 	position: absolute;
 	cursor: pointer;
 	top: 100%;
@@ -288,7 +290,7 @@ button.content-switch:hover {
 
 button.content-switch::before {
 	content: '\e097';
-	font-family: 'feathericons';
+	font-family: 'font-awesome';
 	speak: none;
 	position: absolute;
 	width: 100%;
@@ -309,7 +311,8 @@ button.content-switch::before {
 }
 
 .show-content .current button.content-switch::before {
-	content: '\e096';
+	/* content: '\e096'; */
+	content: 'fa fa-caret-up';
 }
 
 /* Content */
