--- a/main.css
+++ b/main.css
@@ -51,14 +51,14 @@ img.aurora-skeleton-viz-img-2 {
     z-index: 10;
 }
 
-/* SH04 */
+/* SH04 - Concept */
 .slide.SH4.current {
     background: url(https://cloud.githubusercontent.com/assets/4642277/11177486/dfb4d4ec-8c13-11e5-89ca-515bdc105ae5.jpeg);
     background-size: cover;
     background-repeat: no-repeat;
-    background-color: rgba(88,133,159,.5);
+    background-color: rgba(0,0,0,.5);
+    background-position: center center;
     z-index: 0;
-    background-position-x: -2em;
     transform: scale(1.05);
 }
 
