--- a/css/component.css
+++ b/css/component.css
@@ -251,14 +251,14 @@ button.slider-switch:hover {
 }
 
 button.content-switch {
-	background-image: url(https://maxcdn.icons8.com/windows10/PNG/32/Arrows/chevron_down-32.png);
-    /* content: 'fa fa-caret-down'; */
-    /* border: 2px solid #fff; */
-    /* width: 160px; */
-    /* text-indent: 200%; */
-    /* overflow: hidden; */
-    /* white-space: nowrap; */
-    /* background: transparent; */
+    background-image: url(https://maxcdn.icons8.com/windows10/PNG/32/Arrows/chevron_down-32.png);
+    background-repeat: no-repeat;
+    border: 2px solid #fff;
+    width: 160px;
+    background-position: center center;
+    overflow: hidden;
+    white-space: nowrap;
+    /* background: black; */
     /* color: #fff; */
     /* font-family: 'Lato', sans-serif; */
     /* font-family: 'font-awesome'; */
@@ -269,14 +269,14 @@ button.content-switch {
     -webkit-transform: translate3d(-50%,-200%,0);
     transform: translate3d(-50%,-200%,0);
     padding: 1em 2em;
-    /* font-size: 0.85em; */
+    font-size: 0.85em;
     line-height: 1;
     text-transform: uppercase;
     letter-spacing: 1px;
     /* font-weight: 400; */
-    /* outline: none; */
+    outline: none;
     z-index: 1000;
-    /* opacity: 0.7; */
+    opacity: 0.7;
     -webkit-transition: -webkit-transform 0.6s cubic-bezier(.7,0,.3,1), opacity 0.3s, color 0.3s, border-color 0.3s;
     transition: transform 0.6s cubic-bezier(.7,0,.3,1), opacity 0.3s, color 0.3s, border-color 0.3s;
 }
