--- a/css/component.css
+++ b/css/component.css
@@ -250,6 +250,7 @@ button.slider-switch:hover {
 	font-weight: 400;
 }
 
+/* top button in SH# */
 button.content-switch {
     
     /* background-image: url(https://maxcdn.icons8.com/windows10/PNG/32/Arrows/chevron_down-32.png); */
@@ -280,6 +281,7 @@ button.content-switch {
     opacity: 0.7;
     -webkit-transition: -webkit-transform 0.6s cubic-bezier(.7,0,.3,1), opacity 0.3s, color 0.3s, border-color 0.3s;
     transition: transform 0.6s cubic-bezier(.7,0,.3,1), opacity 0.3s, color 0.3s, border-color 0.3s;
+    border: 1px solid red;
 }
 
 .no-js button.content-switch {
@@ -304,19 +306,27 @@ button.content-switch::before {
 	line-height: 0.75;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	border: 1px dotted red;
 }
 
+/* bottom button in SC# */
 .show-content .current button.content-switch {
 	border-color: #c5d3d6;
 	color: #c5d3d6;
 	-webkit-transform: translate3d(-50%,100%,0);
 	transform: translate3d(-50%,100%,0);
+	background-image: url(https://maxcdn.icons8.com/windows10/PNG/32/Arrows/chevron_up-32.png);
+    overflow: hidden;
+    background-position: center center;
+    background-repeat: no-repeat;
+    border: 1px solid blue;
 }
 
 .show-content .current button.content-switch::before {
 	/* content: '\e096';
 	content: 'fa fa-caret-up'; */
-	background-image: url(https://maxcdn.icons8.com/windows10/PNG/32/Arrows/chevron_down-32.png);
+	background-image: url(https://maxcdn.icons8.com/windows10/PNG/32/Arrows/chevron_up-32.png);
+	border: 1px dotted blue;
 }
 
 /* Content */
