--- a/css/component.css
+++ b/css/component.css
@@ -252,12 +252,12 @@ button.slider-switch:hover {
 
 /* top button in SH# */
 button.content-switch {
-    
-    /* background-image: url(https://maxcdn.icons8.com/windows10/PNG/32/Arrows/chevron_down-32.png); */
-    /* background-repeat: no-repeat; */
+background-image: url(https://maxcdn.icons8.com/windows10/PNG/32/Arrows/chevron_up-32.png);
+
+    border-radius: 50%;
     border: 2px solid #fff;
-    width: 160px;
-    /* background-position: center center; */
+    width: 60px;
+    height: 60px;
     overflow: hidden;
     white-space: nowrap;
     background: transparent;
@@ -281,7 +281,7 @@ button.content-switch {
     opacity: 0.7;
     -webkit-transition: -webkit-transform 0.6s cubic-bezier(.7,0,.3,1), opacity 0.3s, color 0.3s, border-color 0.3s;
     transition: transform 0.6s cubic-bezier(.7,0,.3,1), opacity 0.3s, color 0.3s, border-color 0.3s;
-    border: 1px solid red;
+    /* border: 1px solid red; */
 }
 
 .no-js button.content-switch {
@@ -293,8 +293,6 @@ button.content-switch:hover {
 }
 
 button.content-switch::before {
-	/* content: '\e097';
-	font-family: 'font-awesome'; */
 	background-image: url(https://maxcdn.icons8.com/windows10/PNG/32/Arrows/chevron_down-32.png);
 	speak: none;
 	position: absolute;
@@ -306,7 +304,6 @@ button.content-switch::before {
 	line-height: 0.75;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	border: 1px dotted red;
 }
 
 /* bottom button in SC# */
@@ -319,12 +316,13 @@ button.content-switch::before {
     overflow: hidden;
     background-position: center center;
     background-repeat: no-repeat;
-    border: 1px solid blue;
+    border-radius: 50%;
+    border: 2px solid #fff;
+    width: 60px;
+    height: 60px;
 }
 
 .show-content .current button.content-switch::before {
-	/* content: '\e096';
-	content: 'fa fa-caret-up'; */
 	background-image: url(https://maxcdn.icons8.com/windows10/PNG/32/Arrows/chevron_up-32.png);
 	border: 1px dotted blue;
 }
