--- a/main.css
+++ b/main.css
@@ -33,11 +33,12 @@ img.aurora-skeleton-viz-img-1 {
     z-index: 0;
 }
 
-img.aurora-skeleton-viz-img-2 {
-    opacity: .25;
-    /*transform: scale(0.73);
-    padding-bottom: 1em;
-    z-index: 10;*/
+img.aurora-skeleton-viz-img-2a {
+    opacity: .75;
+}
+
+img.aurora-skeleton-viz-img-2b {
+    opacity: .75;
 }
 
 .js .slide h2.slogan-quote {
