--- a/main.css
+++ b/main.css
@@ -8,11 +8,12 @@ h4.overlay-instructions-about {
 }
 
 /* S01 header */
-.slide.SH1.current {
-    background: url(http://biomath.math.nd.edu/compbio/PhoneNetwork/continental0p001.gif);
+.slide.SH1 {
+    /* img description */
+    /* background: url(http://biomath.math.nd.edu/compbio/PhoneNetwork/continental0p001.gif); */
     background-size: cover;
     background-repeat: no-repeat;
-    background-color: rgba(88,133,159,.5);
+    background-color: rgba(0,0,0,.5);
     z-index: 0;
     background: rgb(0,0,0);
 }
@@ -24,12 +25,13 @@ img.aurora-skeleton-viz-img-1 {
     z-index: 2;
 }
 
-/* S02 header */
-.slide.SH2.current {
-    background: url(http://biomath.math.nd.edu/compbio/PhoneNetwork/continental0p001.gif);
+/* S02 New Medium */
+.slide.SH2 {
+    /* img description */
+    /* background: url(http://biomath.math.nd.edu/compbio/PhoneNetwork/continental0p001.gif); */
     background-size: cover;
     background-repeat: no-repeat;
-    background-color: rgba(88,133,159,.5);
+    background-color: rgba(0,0,0,.5);
     z-index: 0;
 }
 
@@ -52,9 +54,28 @@ img.aurora-skeleton-viz-img-2b {
     z-index: 10;
 }
 
-/* SH04 - Concept */
-.slide.SH4.current {
-    background: url(https://cloud.githubusercontent.com/assets/4642277/11177486/dfb4d4ec-8c13-11e5-89ca-515bdc105ae5.jpeg);
+/* SH03 - Concept */
+.slide.SH3 {
+    /* img description */
+    background: url();
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-color: rgba(0,0,0,.5);
+    z-index: 0;
+}
+
+img.aurora-skeleton-viz-img-3 {
+    opacity: .25;
+    transform: scale(0.73);
+    padding-bottom: 1em;
+    z-index: 2;
+}
+
+
+/* SH04 - About */
+.slide.SH4 {
+    /* planet_rium seating */
+    background: url();
     background-size: cover;
     background-repeat: no-repeat;
     background-color: rgba(0,0,0,.5);
@@ -63,7 +84,75 @@ img.aurora-skeleton-viz-img-2b {
     transform: scale(1.05);
 }
 
-img.aurora-skeleton-viz-img-inside-02c {
+img.aurora-skeleton-viz-img-inside-4 {
+    opacity: .4;
+    transform: scale(1.03);
+}
+
+/* SH05 - Experience */
+.slide.SH5 {
+    /* planet_rium seating */
+    background: url();
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-color: rgba(0,0,0,.5);
+    background-position: center center;
+    z-index: 0;
+    transform: scale(1.05);
+}
+
+img.aurora-skeleton-viz-img-inside-5 {
+    opacity: .4;
+    transform: scale(1.03);
+}
+
+/* SH06 - Tech */
+.slide.SH6 {
+    /* planet_rium seating */
+    background: url();
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-color: rgba(0,0,0,.5);
+    background-position: center center;
+    z-index: 0;
+    transform: scale(1.05);
+}
+
+img.aurora-skeleton-viz-img-inside-6 {
+    opacity: .4;
+    transform: scale(1.03);
+}
+
+/* SH07 - Experience + Tech + Concept = Movie REEL */
+.slide.SH7 {
+    /* planet_rium seating */
+    background: url();
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-color: rgba(0,0,0,.5);
+    background-position: center center;
+    z-index: 0;
+    transform: scale(1.05);
+}
+
+img.aurora-skeleton-viz-img-inside-7 {
+    opacity: .4;
+    transform: scale(1.03);
+}
+
+/* SH08 - CTA */
+.slide.SH8 {
+    /* planet_rium seating */
+    background: url();
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-color: rgba(0,0,0,.5);
+    background-position: center center;
+    z-index: 0;
+    transform: scale(1.0);
+}
+
+img.aurora-skeleton-viz-img-inside-8 {
     opacity: .4;
     transform: scale(1.03);
 }
