--- a/main.css
+++ b/main.css
@@ -28,7 +28,7 @@ img.aurora-skeleton-viz-img-1 {
 /* S02 New Medium */
 .slide.SH2 {
     /* img description */
-    /* background: url(http://biomath.math.nd.edu/compbio/PhoneNetwork/continental0p001.gif); */
+    background: url(http://biomath.math.nd.edu/compbio/PhoneNetwork/continental0p001.gif);
     background-size: cover;
     background-repeat: no-repeat;
     background-color: rgba(0,0,0,.5);
