--- a/main.css
+++ b/main.css
@@ -142,8 +142,8 @@ img.aurora-skeleton-viz-img-inside-7 {
 
 /* SH08 - CTA */
 .slide.SH8 {
-    /* planet_rium seating */
-    background: url();
+    /* gfx */
+    background: url(https://38.media.tumblr.com/51ffecaedffadecaa8748c3fcf3d618e/tumblr_mjkbmwBlCA1qfn05jo1_500.gif);
     background-size: cover;
     background-repeat: no-repeat;
     background-color: rgba(0,0,0,.5);
